--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Daru Chat</title>
+        <title>Let's Chat - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="stylesheet/main.css">
         <link rel="stylesheet" type="text/css" href="datatables_css/css/jquery.dataTables.css">
@@ -10,6 +10,28 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   </head>
   <body class="background-whiteblue">
+    <div id="loginCanvas" style="overflow: hidden; position: fixed; width: 100vw; height: 100vh; z-index: 20;  transition: all 1s ease-in;">
+        <div style=" position: relative; width: 100%; height: 100%; background: rgb(255, 255, 255, 0.5); display: block;">
+            <div style="position:fixed; top: calc((100% - 400px) / 2); left: calc((100% - 400px) / 2); display:block; width: 400px; background: white; box-shadow: 0 0 20px rgba(0,0,0,0.15);">
+                <form style="margin: 20px;">
+                    <h1 style="margin-bottom: 20px";>Sign In</h1>
+                    <label for="username" style="font-size: 10pt; color: grey; margin-bottom: 2px;">Username</label>
+                    <input id="username" class="form-control" autocomplete="off" placeholder="Username" style="display: block; margin-bottom: 10px;">
+                    <label for="password" style="font-size: 10pt; color: grey; margin-bottom: 2px;">Password</label>
+                    <input id="password" type="password" class="form-control" autocomplete="off" placeholder="Password" style="display: block; margin-bottom: 10px;">
+                    <div style="text-align: left;">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="alwaysSignedIn">
+                            <label class="form-check-label" for="alwaysSignedIn">Keep me signed in</label>
+                        </div>
+                        <button class="btn btn-success" style="margin: 10px 10px 10px 0; padding: .4rem 1.5rem;">Sign In</button>
+                        <button id="continueAsGuest" class="btn btn-success" style="margin: 10px 10px 10px 0; padding: .4rem 1.5rem;">Continue as Guest</button>
+                        <a href="/signup" style="cursor: pointer; margin-top: 5px; display: block;">Don't have an account? Sign up here</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <div style="width: 100vw; overflow: hidden; position: relative">
       <div id="nextPage" class="next-page text-center to-right">
         <span id="arrow" class="arrow arrow-to-right"></span>
@@ -20,8 +42,8 @@
             <div class="message-output" style="max-width: 100vw;">    
               <ul id="messages"></ul>
             </div>
-            <form action="" style="max-width: 100vw;">
-              <input id="m" autocomplete="off" placeholder="Write a message.."><button>Send</button>
+            <form id="chatForm" action="" style="max-width: 100vw;">
+              <input id="m" class="chat-textbox" autocomplete="off" placeholder="Write a message.."><button class="chat-button">Send</button>
             </form>
           </div>
         </div>
@@ -39,7 +61,7 @@
                   <div id="profilePicture">
                     <img src="images/profile_male.jpg" style="height: 200px;">
                   </div>
-                  <h1 id="username">Agustinus Theodorus</h1>
+                  <h1 id="profileUsername">Agustinus Theodorus</h1>
                 </div>
               </div>
               <div class="dashboard-contacts" style="width:80%; margin-left: auto; margin-right: auto; margin-top: 50px; margin-bottom: 30px;">
