signin and signup route works. Return username, id, and token if success

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                             <input type="checkbox" class="form-check-input" id="alwaysSignedIn">
                             <label class="form-check-label" for="alwaysSignedIn">Keep me signed in</label>
                         </div>
-                        <button class="btn btn-success" style="margin: 10px 10px 10px 0; padding: .4rem 1.5rem;">Sign In</button>
+                        <button class="btn btn-success" id="signin-btn" style="margin: 10px 10px 10px 0; padding: .4rem 1.5rem;">Sign In</button>
                         <button id="continueAsGuest" class="btn btn-success" style="margin: 10px 10px 10px 0; padding: .4rem 1.5rem;">Continue as Guest</button>
                         <a href="/signup" style="cursor: pointer; margin-top: 5px; display: block;">Don't have an account? Sign up here</a>
                     </div>
@@ -372,6 +372,7 @@
     <script src="datatables/jquery.dataTables.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script/index.js"></script>
+    <script src="script/signIn.js"></script>
   </body>
 </html>
     
