--- a/public/signup.html
+++ b/public/signup.html
@@ -27,5 +27,5 @@
     </body>
     <script src="jquery/jquery.min.js"></script> 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/script/signup.js"></script>
+    <script src="/script/signUp.js"></script>
 </html>
