--- a/public/index.html
+++ b/public/index.html
@@ -10,23 +10,23 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   </head>
   <body class="background-whiteblue">
-    <div id="loginCanvas" style="overflow: hidden; position: fixed; width: 100vw; height: 100vh; z-index: 20;  transition: all 1s ease-in;">
-        <div style=" position: relative; width: 100%; height: 100%; background: rgb(255, 255, 255, 0.5); display: block;">
-            <div style="position:fixed; top: calc((100% - 400px) / 2); left: calc((100% - 400px) / 2); display:block; width: 400px; background: white; box-shadow: 0 0 20px rgba(0,0,0,0.15);">
+    <div class="login-canvas">
+        <div class="login-modal">
+            <div id="loginBox">
                 <form style="margin: 20px;">
                     <h1 style="margin-bottom: 20px";>Sign In</h1>
-                    <label for="username" style="font-size: 10pt; color: grey; margin-bottom: 2px;">Username</label>
+                    <label for="username" class="label-title">Username</label>
                     <input id="username" class="form-control" autocomplete="off" placeholder="Username" style="display: block; margin-bottom: 10px;">
-                    <label for="password" style="font-size: 10pt; color: grey; margin-bottom: 2px;">Password</label>
+                    <label for="password" class="label-title">Password</label>
                     <input id="password" type="password" class="form-control" autocomplete="off" placeholder="Password" style="display: block; margin-bottom: 10px;">
                     <div style="text-align: left;">
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="alwaysSignedIn">
                             <label class="form-check-label" for="alwaysSignedIn">Keep me signed in</label>
                         </div>
-                        <button class="btn btn-success" style="margin: 10px 10px 10px 0; padding: .4rem 1.5rem;">Sign In</button>
-                        <button id="continueAsGuest" class="btn btn-success" style="margin: 10px 10px 10px 0; padding: .4rem 1.5rem;">Continue as Guest</button>
-                        <a href="/signup" style="cursor: pointer; margin-top: 5px; display: block;">Don't have an account? Sign up here</a>
+                        <button class="btn btn-success btn-signin">Sign In</button>
+                        <button class="btn btn-success btn-guest">Continue as Guest</button>
+                        <a href="/signup" class="btn-link">Don't have an account? Sign up here</a>
                     </div>
                 </form>
             </div>
