--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Let's Chat - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" type="image/x-icon" href="images/ladang_curhat_web_icon.ico" />
         <link rel="stylesheet" type="text/css" href="stylesheet/main.css">
         <link rel="stylesheet" type="text/css" href="datatables_css/css/jquery.dataTables.css">
         <link rel="stylesheet" type="text/css" href="/bootstrap/bootstrap.min.css">
