--- a/public/signup.html
+++ b/public/signup.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Let's Chat - Login
+            Let's Chat - Sign Up
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/bootstrap/bootstrap.min.css">
