--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                   <h1 id="profileUsername">Agustinus Theodorus</h1>
                 </div>
               </div>
-              <div class="dashboard-contacts" style="width:80%; margin-left: auto; margin-right: auto; margin-top: 50px; margin-bottom: 30px;">
+              <div class="dashboard-contacts">
                 <table id="contacts" class="display">
                   <thead>
                       <tr>
