added caching to web, on the road to a PWA

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheet/main.css">
         <link rel="stylesheet" type="text/css" href="datatables_css/css/jquery.dataTables.css">
         <link rel="stylesheet" type="text/css" href="/bootstrap/bootstrap.min.css">
+        <link rel="manifest" href="manifest.json">
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   </head>
@@ -369,10 +370,11 @@
       </div>
     </div>
     <script src="jquery/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+    <script src="jquery-mobile/jquery-mobile.min.js"></script>
     <script src="datatables/jquery.dataTables.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script/index.js"></script>
+    <script src="script/scripts.js"></script>
     <script src="script/signIn.js"></script>
   </body>
 </html>
