--- a/public/index.html
+++ b/public/index.html
@@ -371,11 +371,11 @@
       </div>
     </div>
     <script src="jquery/jquery.min.js"></script>
-    <script src="jquery-mobile/jquery-mobile.min.js"></script>
+    <script src="script/jquery-mobile.min.js"></script>
     <script src="datatables/jquery.dataTables.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script/index.js"></script>
-    <script src="script/scripts.js"></script>
+    <script src="script/swScripts.js"></script>
     <script src="script/signIn.js"></script>
   </body>
 </html>
